# audio-transcription-service

./: .gitignore  README.md  pyproject.toml  test_client.py
audio_transcription_service/: audio_processor.py  config.py  main.py  routes.py  schemas.py  websocket_manager.py
