[project]
name = "targetai-task"
version = "1.0.0"
description = "🎤 WebSocket Audio Transcription Service with FastAPI + Multiprocessing + IPC"
authors = [{name = "Dmitriy Shubenok", email = "dshubenok93@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "websockets>=15.0.1",
]

[project.scripts]
serve = "targetai_task.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]
