[project]
name = "audio-transcription-service"
version = "1.0.0"
description = "🎤 WebSocket Audio Transcription Service with FastAPI + Multiprocessing + IPC"
authors = [{name = "Dmitriy Shubenok", email = "dshubenok93@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "websockets>=15.0.1",
]

[project.scripts]
serve = "audio_transcription_service.main:main"

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]
